# TerminalCalculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
doc/: configuration.md  usage.md
src/: CMakeLists.txt  config.h.in  entry.cpp  entry.h  global.h  main.cpp  state.cpp  state.h
src/Parser/: Arithmetic.cpp  Arithmetic.h  Commands.cpp  Commands.h  Func.cpp  Func.h  Parser.cpp  Parser.h  Vars.cpp  Vars.h
src/Tools/: Color.cpp  Color.h  Config.cpp  Config.h.in  Entry.cpp  Entry.h  State.cpp  State.h
src/parser/: algebra.cpp  algebra.h  arithmetic.cpp  arithmetic.h  commands.cpp  commands.h  func.cpp  func.h  parser.cpp  parser.h  vars.cpp  vars.h
src/tools/: color.cpp  color.h  config.cpp  config.h.in  entry.cpp  entry.h  state.cpp  state.h
test/: CMakeLists.txt  main.cpp
test/Parser/: ArithmeticTest.hpp  CommandsTest.hpp  FuncTest.hpp  ParserTest.hpp  VarsTest.hpp
test/parser/: arithmetic_test.hpp  commands_test.hpp  func_test.hpp  parser_test.hpp  vars_test.hpp
